compiler/test-data/parser/contract/errors/unclosed_brace.frel
module test

contract UserAPI {
    get_user(id: Uuid) : User
